--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    margin-left: 15%;
+
 
 }
 
@@ -32,17 +34,21 @@ nav {
 
 section {
     background: #ebebeb;
-    display:flex;
+    /* display:flex; */
     flex-direction: column;
-    justify-content: center;
-    padding: 0px 195px;
-    margin-right: 10px;
+    justify-content: left;
+    width:49%;
+    padding: 100px;
+    margin-right: 2%;
+    
+
 
 }
 
 aside {
-    background: red;
+    background: #ebebeb;
     padding: 200px;
+    width:49%;
    
     
 
@@ -52,8 +58,10 @@ aside {
 
 footer {
     background: #ebebeb;
-    padding: 10px;
+    padding: 25px;
     width: 960px;
+   
+
     
     
 }
@@ -61,7 +69,9 @@ footer {
 article {
     color: #ebebeb;
     background: #777;
-   
+    width: 150%;
+    margin-left: -65px;
+    height: 100%;
     
 
 }
@@ -69,7 +79,12 @@ article {
 h1 {
     color: #777;
     background: #ebebeb;
-    padding: 15px;
+    height: 65px;
+    margin-left: 25px;
+    margin-right: 25px;
+
+
+
   
 
 }
@@ -77,6 +92,10 @@ h1 {
 p {
     color: #777;
     background: #ebebeb;
+    height:65px;
+    margin-left: 25px;
+    margin-right: 25px;
+
 
 }
 
